--- a/zwpa_app/app/views/layouts/application.html.erb
+++ b/zwpa_app/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "ZWPA Console" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+
+    <%= render :partial => "partials/nav" %>
 
     <%= yield %>
 
