--- a/zwpa_app/app/views/partials/_nav.html.erb
+++ b/zwpa_app/app/views/partials/_nav.html.erb
@@ -13,8 +13,8 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><a href="#">Requests</a></li>
-          <li><a href="#">Clients</a></li>
+          <li><%= link_to 'Requests', requests_path %></li>
+          <li><%= link_to 'Clients', customers_path %></li>
           <li><a href="#">Search</a></li>
           <li><a href="#">Help</a></li>
         </ul>
