updated home screen with grid

--- a/zwpa_app/app/views/home/index.html.erb
+++ b/zwpa_app/app/views/home/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<!-- Main div for displaying most recent requests -->
+<div class="small-12 medium-12 large-7 columns">
+	<h1>Recent Requests</h1>
+
+</div>
+
+
+<!-- Right column displays recently added clients and documents -->
+<div class="show-for-large-up large-5 columns">
+	<div class="row">
+		<div class="small-12 columns">
+			<h4>Recent Documents</h4>
+		</div>
+
+	</div>
+	<div class="row">
+		<div class="small-12 columns">
+			<h4>Recent Clients</h4>
+		</div>
+
+
+	</div>
+
+	
+
+</div>
+
