--- a/zwpa_app/app/views/layouts/application.html.erb
+++ b/zwpa_app/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
   <body>
 
     <%= render :partial => "partials/nav" %>
-
-    <%= yield %>
-
+    <div class="row">
+      <%= yield %>
+    </div>
+    
   </body>
 </html>
