fixed new request button on top nav

--- a/zwpa_app/app/views/partials/_nav.html.erb
+++ b/zwpa_app/app/views/partials/_nav.html.erb
@@ -22,7 +22,8 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <li class="has-form">
-            <a href="http://foundation.zurb.com/docs" class="button">New Request</a>
+            <%= link_to 'New Request', new_request_path, :class => "button" %>
+            
           </li>
         </ul>
       </section>
