--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <!-- should populate automatically based on where you selected to add a new form -->
+  <!-- should populate automatically based on where you selected to add a new form, then the field itself can just stay hidden. -->
   <!-- for MVP, just give user a dropdown of requests -->
   <div class="field">
     <%= f.label :request_id %><br>
