--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -17,10 +17,32 @@
     <%= f.label :request_id %><br>
     <%= f.number_field :request_id %>
   </div>
-  <div class="field">
-    <%= f.label :square_footage %><br>
-    <%= f.number_field :square_footage %>
+
+  <!-- Need a date entry space use simple form gem for this -->
+  <!-- https://github.com/plataformatec/simple_form -->
+
+
+  <div class="row">
+    <div class="small-12 medium-6 large-4 columns">
+      <div class="field row">
+        
+        <div class="small-4 columns">
+          <label for="right-label" class="right inline">Sq. footage</label>
+        </div>
+        <div class="small-8 columns">
+          <%= f.number_field :square_footage %>
+        </div>
+
+
+      </div>
+
+    </div>
+
+
+
   </div>
+
+  
   <div class="field">
     <%= f.label "Number of floors" %><br>
     <%= f.number_field :num_floors %>
@@ -32,6 +54,7 @@
   <div class="field">
     <%= f.label "Are there other spaces/businesses (Leased or Owned/Operated) in the building?" %><br>
     <%= f.number_field :other_businesses %>
+    
   </div>
   <div class="field">
     <label> If yes, what type of business/spaces?</label><br>
